CMAKE_MINIMUM_REQUIRED (VERSION 2.8.12)

PROJECT (IFCPP)
MESSAGE(STATUS   "------------------------------------------------------------------------")
OPTION(BUILD_VIEWER_APPLICATION "Build the viewer example application" ON)
SET(CMAKE_BUILD_TYPE "Debug")
SET(CARVE_SOURCE_DIR ${IFCPP_SOURCE_DIR}/Carve )
SET(CARVE_BINARY_DIR ${IFCPP_BINARY_DIR})
ADD_SUBDIRECTORY (Carve)
ADD_SUBDIRECTORY (IfcPlusPlus)
ADD_SUBDIRECTORY (IfcPlusPlusGeometry)

IF(BUILD_VIEWER_APPLICATION)
  ADD_SUBDIRECTORY (SimpleViewerExample)
ENDIF()
